--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      My Minewesper
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h4>Mines:</h4>
+  <hr>
+  <div *ngFor="let p of mines" style="font-size:30px; font-family:Consolas" >
+    {{p.join(' ')}}
+  </div>
 </ion-content>
