--- a/src/pages/minesweeper/minesweeper.template.html
+++ b/src/pages/minesweeper/minesweeper.template.html
@@ -1,18 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      My Minewesper
+      My Minesweeper
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="no-scroll">
-  <h4>Mines:</h4>
-  <mine *ngFor="let row of mines"></mine>
-
-  <hr>
   <div *ngFor="let row of mines" style="font-size:30px; font-family:Consolas" >
-    <mine *ngFor="let mine of row" [mine]="mine" [width]="100/mines.length" ></mine>
+    <mine *ngFor="let mine of row" [mine]="mine" [width]="100/mines.length"></mine>
     <!--span (press)="pressEvent()" (tap)="tapEvent()"  *ngFor="let mine of row" >{{ mine }}</span-->
   </div>
 
