--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -1,3 +1,3 @@
-<div class="mine" [style.width.vw]="width" >
+<div class="mine" [style.width.vw]="width" [style.height.vw]="width" [class.disabled]="mine.adjacentMines === 0">
  {{ toString() }}
 </div>
