--- a/src/pages/minesweeper/minesweeper.template.html
+++ b/src/pages/minesweeper/minesweeper.template.html
@@ -1,10 +1,20 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar class="main-toolbar">
+    <button ion-button menuToggle icon-only>
+      <ion-icon color="light" name='menu'></ion-icon>
+    </button>
     <ion-title>
       My Minesweeper
     </ion-title>
   </ion-navbar>
+
+  <ion-navbar>
+    <ion-title>
+      <ion-icon [name]="icon" [color]="color" style="font-size:25px;"></ion-icon>
+    </ion-title>
+  </ion-navbar>
 </ion-header>
+
 
 <ion-content class="no-scroll">
   <div *ngFor="let row of mines" style="font-size:30px; font-family:Consolas" >
@@ -15,7 +25,6 @@
   <ion-icon name="happy"></ion-icon>
   <ion-icon name="sad"></ion-icon>
   <ion-icon name="sad"></ion-icon> <br>
-  <ion-icon [name]="icon" [color]="color" style="font-size:25px;"></ion-icon>
   <div class="red">
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, sit porro. Dolores, hic similique accusantium deserunt reprehenderit in laudantium nostrum laborum suscipit, modi exercitationem pariatur cum sit aut ex quibusdam!
   </div>
