Adding flaw in ionic press event

--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -1,3 +1,17 @@
-<div class="mine" [style.width.vw]="width" [style.height.vw]="width" [class.disabled]="mine.adjacentMines === 0">
- {{ toString() }}
+<div class="mine"
+  [style.width.vw]="100/total"
+  [style.height.vw]="100/total"
+  [class.disabled]="isDisabled"
+  (press)="setFlag($event)" >
+
+
+  <div class="img-container" *ngIf="showFlag && !isDisabled">
+    <img src="assets/images/flag.svg" alt="Flag">
+  </div>
+
+  <span *ngIf="!showFlag" >
+    {{ toString() }}
+  </span>
+
+
 </div>
