--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -5,7 +5,8 @@
   [class.red]="!isPressed"
   [class.flag]="showFlag && !isDisabled"
   [class.bomb]="isMine"
-  (press)="toggleFlag($event)" >
+  (press)="toggleFlag($event)"
+  (tap)="tapMine($event)" >
 
   <div class="text-wrapper">
     <span class="text">
