Detected blank squares on click / showing modal when user loses a game

--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -4,7 +4,7 @@
   [class.pressed]="isPressed"
   [class.red]="!isPressed"
   [class.flag]="showFlag && !isDisabled"
-  [class.bomb]="isMine"
+  [class.boom]="wrongTap"
   (press)="toggleFlag($event)"
   (tap)="tapMine($event)" >
 
