Showing toast when user loses the game

--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -4,6 +4,7 @@
   [class.pressed]="isPressed"
   [class.red]="!isPressed"
   [class.flag]="showFlag && !isDisabled"
+  [class.bomb]="isGameLost && isMine"
   [class.boom]="wrongTap"
   (press)="toggleFlag($event)"
   (tap)="tapMine($event)" >
