--- a/src/pages/minesweeper/minesweeper.template.html
+++ b/src/pages/minesweeper/minesweeper.template.html
@@ -23,16 +23,13 @@
       [total]="mines.length"
       [showContent]="mine.showContent"
       [isPressed]="mine.isPressed"
-      (unhideAdjacents)="unhideAdjacents(mine.pos.x, mine.pos.y)">
+      [isGameLost]="isGameLost"
+      (unhideAdjacents)="unhideAdjacents(mine.pos.x, mine.pos.y)"
+      (onLostGame)="gameLost()" >
+      >
     </mine>
   </div>
-
-  <ion-icon name="happy"></ion-icon>
   <ion-icon name="sad"></ion-icon>
-  <ion-icon name="sad"></ion-icon> <br>
-  <div class="red">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, sit porro. Dolores, hic similique accusantium deserunt reprehenderit in laudantium nostrum laborum suscipit, modi exercitationem pariatur cum sit aut ex quibusdam!
-  </div>
 </ion-content>
 
 
