Added monospaced font for IOs

--- a/src/pages/minesweeper/minesweeper.template.html
+++ b/src/pages/minesweeper/minesweeper.template.html
@@ -32,4 +32,9 @@
   <ion-icon name="sad"></ion-icon>
 </ion-content>
 
+<!-- Preload images -->
+<img src="../assets/images/bomb.svg" alt="" style="display:none">
+<img src="../assets/images/flag.svg" alt="" style="display:none">
+
+
 
