--- a/src/pages/minesweeper/minesweeper.template.html
+++ b/src/pages/minesweeper/minesweeper.template.html
@@ -33,8 +33,8 @@
 </ion-content>
 
 <!-- Preload images -->
-<img src="../assets/images/bomb.svg" alt="" style="display:none">
-<img src="../assets/images/flag.svg" alt="" style="display:none">
+<img src="/assets/images/bomb.svg" alt="" style="display:none">
+<img src="/assets/images/flag.svg" alt="" style="display:none">
 
 
 
