Detecting when user wins the game

--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -5,6 +5,7 @@
   [class.red]="!isPressed"
   [class.flag]="showFlag && !isDisabled"
   [class.bomb]="isGameLost && isMine"
+  [class.flag]="isGameWon && isMine"
   [class.boom]="wrongTap"
   (press)="toggleFlag($event)"
   (tap)="tapMine($event)" >
