--- a/src/pages/minesweeper/mine/mine.template.html
+++ b/src/pages/minesweeper/mine/mine.template.html
@@ -3,16 +3,21 @@
   [style.height.vw]="100/total"
   [class.pressed]="isPressed"
   [class.red]="!isPressed"
-  [class.flag]="showFlag && !isDisabled"
   [class.bomb]="isGameLost && isMine"
-  [class.flag]="isGameWon && isMine"
   [class.boom]="wrongTap"
   (press)="toggleFlag($event)"
   (tap)="tapMine($event)" >
 
-  <div class="text-wrapper">
-    <span class="text">
-        <span class="mine-text" *ngIf="showContent"> {{toString()}} </span>
-    </span>
+  <div class="content-wrapper">
+    <div class="text-content" *ngIf="showContent">
+        <span class="mine-text"> {{toString()}} </span>
+    </div>
+    <div class="image-content" *ngIf="!showContent">
+      <svg version="1.1" class="svg" [class.show]="isGameWon && isMine || showFlag && !isDisabled" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+        <polygon points="52,23.5 10,40 10,22 10,4 "/>
+        <path d="M9,0C8.448,0,8,0.447,8,1v3v55c0,0.553,0.448,1,1,1s1-0.447,1-1V4V1C10,0.447,9.552,0,9,0z"/>
+      </svg>
+    </div>
   </div>
 </div>
